style.css
/* ======= Defaults ======= */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-weight: 700;
}
/* ======= font ======= */
@font-face {
  font-family: "League Spartan";
  src: url(fonts/LeagueSpartan-VariableFont_wght.ttf);
  font-weight: 700;
}
body {
  font-size: var(--font-default-size);
  font-family: var(--font-primary);
  font-weight: var(--font-weight);
  color: var(--default-text-color);
}
/* ======= colors ======= */
:root {
  /* Font */
  --font-primary: 'League Spartan', sans-serif;
  --font-weight: 700;
  --font-default-size: 14px;
  /* Text color */
  --default-text-color: hsl(0, 0%, 100%);
  /* First theme */
  --main-background: hsl(229, 100%, 15%);
  --main-toggle-keypad: hsla(337, 100%, 50%, 0.477);
  --main-screen: hsl(330, 71%, 26%);
  --main-key: hsl(241, 98%, 24%);
  --main-key-shadow:hsl(241, 98%, 10%);
  --main-key-assign-slider: hsl(6, 63%, 50%);
  --main-key-assign-slider-shadow:hsl(6, 70%, 34%);
  --main-key-reset-del: hsl(269, 98%, 33%);
  --main-key-reset-del-shadow:hsl(269, 98%, 20%);
  --main-button-text: hsl(42, 100%, 47%);
  --main-button-active:rgb(255, 0, 102);
  /* Secondary theme */
  --sec-background: hsl(345, 90%, 20%);
  --sec-toggle-keypad: hsl(41, 100%, 32%);
  --sec-screen: hsl(41, 100%, 32%);
  --sec-key: hsl(0, 0%, 80%);
  --sec-key-shadow:hsl(0, 0%, 50%);
  --sec-key-assign-slider: hsl(0, 95%, 40%);
  --sec-key-assign-slider-shadow:hsl(0, 95%, 30%);
  --sec-key-reset-del: hsl(40, 100%, 55%);
  --sec-key-reset-del-shadow:hsl(46, 65%, 40%);
  --sec-button-text: hsl(0, 95%, 42%);
  --sec-button-active:rgb(94, 0, 0);
  /* tertiary theme */
  --tertiary-background: hsl(155, 88%, 20%);
  --tertiary-toggle-keypad: hsl(120, 82%, 30%);
  --tertiary-screen: hsl(120, 82%, 30%);
  --tertiary-key: hsl(150, 82%, 20%);
  --tertiary-key-shadow:hsl(156, 100%, 11%);
  --tertiary-key-assign-slider: hsl(76, 94%, 49%);
  --tertiary-key-assign-slider-shadow:hsl(73, 60%, 28%);
  --tertiary-key-reset-del: hsl(47, 94%, 33%);
  --tertiary-key-reset-del-shadow:hsl(47, 94%, 20%);
  --tertiary-button-text: hsl(129, 100%, 8%);
  --tertiary-button-active:hsl(120, 100%, 50%);
  /* Font size */
}
/* ======= main ======= */
main {
  width: 100vw;
  min-height: 100vh;
}
/* ======= Container  ======= */
/* main theme */
.container.main-theme {
  background: var(--main-background);
}
/* sec theme */
.container.sec-theme {
  background: var(--sec-background);
  color: var(--sec-button-text);
}
/* tertiary theme */
.container.tertiary-theme{
  background: var(--tertiary-background);
  color: var(--tertiary-button-text);
}
.container {
  width: 100%;
  min-height: 100vh;
  display: grid;
  place-content: center;
}
/* ======= Calc container  ======= */
.calculator {
  margin-bottom: 50px;
  display: flex;
  flex-direction: column;
  gap: 1.3rem;
  width: 95vw;
  max-width: 500px; 
  background: rgba(0, 0, 0, 0.3);
  padding: 20px;
  border-radius: 15px;
  box-shadow: 0px 10px 0px 0px black;
}
/* ======= Calc header  ======= */
.calculator-header {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
/* ======= Theme toggle ======= */
.theme-toggle {
  height: 100%;
  display: flex;
  align-items: center;
  gap: 2rem;
}
/* title (calc) */
.theme-toggle-title {
  font-size: 2rem;
}
/* theme text (theme) */
.theme-text {
  margin-top: 30px;
}
.theme-text.sec-theme{
  color: var(--sec-button-text);
}
.switch {
  border: none;
  width: 85px;
  border-radius: 40px;
  padding: 5px;
  height: 30px;
  margin-top: 8px;
}
/* main theme */
.switch.main-theme {
  background: var(--main-toggle-keypad);
}
/* sec theme */
.switch.sec-theme {
  background: var(--sec-toggle-keypad);
}
/* tertiary theme */
.switch.tertiary-theme{
  background: var(--tertiary-toggle-keypad);
}
/* numbers */
.theme-toggle-numbers {
  display: flex;
  justify-content: space-around;
}
/* slider */
.slider {
  width: 20px;
  width: 20px;
  height: 100%;
  border-radius: 50%;
  cursor: pointer;
}
.slider.main-theme {
  background: var(--main-key-assign-slider);
}
.slider.sec-theme {
  background: var(--sec-key-assign-slider);
}
.slider.tertiary-theme {
  background: var(--tertiary-key-assign-slider);
}
/* ======= Screen ======= */
.calc-screen {
  width: 100%;
  height: 100px;
  border-radius: 10px;
  background: var(--main-);
  padding: 1.5rem;
  text-align: end;
}
/* Previous calculation */
.calc-screen .previous-operation {
  font-size: 16px;
  margin-bottom: 10px;
  height: 20%;
  opacity: .5;
}
/* Current calculation */
.calc-screen .current-operation {
  height: 80%;
  font-size: 3rem;
  direction: ltr;
}
/* main theme */
.calc-screen.main-theme {
  background: var(--main-screen);
}
/* sec theme */
.calc-screen.sec-theme {
  background: var(--sec-screen);
}
/* tertiary theme */
.calc-screen.tertiary-theme {
  background: var(--tertiary-screen);
}
/* Calc keyboard */
.calc-keyboard {
  height: 400px;
  border-radius: 10px;
  padding: 2rem;
  display: grid;
  grid-template-rows: repeat(5,calc(20% - 10px));
  grid-template-columns: repeat(4,calc(25% - 7.5px));
  place-content: center;
  gap: 15px;
}
/* main theme */
.calc-keyboard.main-theme {
    background: var(--main-toggle-keypad);
}
/* sec theme */
.calc-keyboard.sec-theme {
    background: var(--sec-toggle-keypad);
}
/* tertiary theme */
.calc-keyboard.tertiary-theme {
    background: var(--tertiary-toggle-keypad);
}
/* Keys */
.key {
  border-radius: 5px;
  font-size: 34px;
  border: none;
  font-weight: 700;
  transition:  background-color .2s, box-shadow .1s;
}
/* key reset */
.key-reset {
  grid-column: 1 / 3;
  font-size: 24px;
}
/* key assign */
.key-assign {
  grid-column: 3 / -1;
}
/* key del */
.key-del {
  font-size: 24px;
}
/* ======== keys main theme ======== */
.calc-keyboard.main-theme>.key {
  background: var(--main-key);
  box-shadow: 0px 5px 0px 0px var(--main-key-shadow);
  color: var(--main-button-text);
}
.calc-keyboard.main-theme>.key-reset,
.calc-keyboard.main-theme>.key-del {
  background: var(--main-key-reset-del);
  box-shadow: 0px 5px 0px 0px var(--main-key-reset-del-shadow);
  color: var(--default-text-color);
}
.calc-keyboard.main-theme>.key-assign {
  font-size: 24px;
  color: var(--default-text-color);
  background: var(--main-key-assign-slider);
    box-shadow: 0px 5px 0px 0px var(--main-key-assign-slider-shadow);
}
/* ======== keys sec theme ======== */
.calc-keyboard.sec-theme>.key {
  background: var(--sec-key);
  box-shadow: 0px 5px 0px 0px var(--sec-key-shadow);
  color: var(--sec-button-text);
}
.calc-keyboard.sec-theme>.key-reset,
.calc-keyboard.sec-theme>.key-del {
  background: var(--sec-key-reset-del);
  box-shadow: 0px 5px 0px 0px var(--sec-key-reset-del-shadow);
  color: var(--default-text-color);
}
.calc-keyboard.sec-theme>.key-assign {
  font-size: 24px;
  color: var(--default-text-color);
  background: var(--sec-key-assign-slider);
    box-shadow: 0px 5px 0px 0px var(--sec-key-assign-slider-shadow);
}
/* ======== keys tertiary theme ======== */
.calc-keyboard.tertiary-theme>.key {
  background: var(--tertiary-key);
  box-shadow: 0px 5px 0px 0px var(--tertiary-key-shadow);
  color: var(--tertiary-button-text);
}
.calc-keyboard.tertiary-theme>.key-reset,
.calc-keyboard.tertiary-theme>.key-del {
  background: var(--tertiary-key-reset-del);
  box-shadow: 0px 5px 0px 0px var(--tertiary-key-reset-del-shadow);
  color: var(--default-text-color);
}
.calc-keyboard.tertiary-theme>.key-assign {
  font-size: 24px;
  color: var(--tertiary-background);
  background: var(--tertiary-key-assign-slider);
    box-shadow: 0px 5px 0px 0px var(--tertiary-key-assign-slider-shadow);
}
/* ======== Hover Effects ========*/
@media (hover:hover) {
  .calc-keyboard>.key:hover {
    transform: scale(.96);
  }
  .calc-keyboard>.key:active {
    transform: scale(.93);
    opacity: .8;
    box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0);
  }
  .calc-keyboard.main-theme>.key:active {
    background: var(--main-button-active);
  }
  .calc-keyboard.sec-theme>.key:active {
    background: var(--sec-button-active);
  }
  .calc-keyboard.tertiary-theme>.key:active {
    background: var(--tertiary-button-active);
  }
}
/* Transition */
.sec-theme,.main-theme,.tertiary-theme {
  transition: background-color .5s;
}
.me {
  text-align: center;
  font-size: 20px;
}
a {
  color: currentColor;
  font-style: italic;
  text-decoration: none;
}

a:visited {
  color: currentColor;
}

